# LDYOM

./: .gitignore  .gitmodules  .htaccess  2077.html  404.html  Download.html  GUI.lua  LDYOM070.html  LDYOM071.html  LDYOM072.html  LDYOM_ASI.lua  LDYOM_Base.lua  LDYOM_data.ini  LICENSE  MissManager.lua  README.md  SASCM.INI  TextToGTX.lua  data.ts  docusaurus.config.ts  header.html  index.html  mission_player.lua  mkbooks.sh  mkdocs.yml  mydocs.pd  package-lock.json  package.json  sidebars.ts  sitemap.xml  Что делать с ними.txt
DOC/: LDYOM_rus.hmxz
DYOM to LDYOM/: convector.py
LDYOM/: LDYOM_data.ini  settings.json
LDYOM/Language/: English.ini  Portuguese.ini  Russian.ini
LDYOM/Languages/: English.toml  Polish.toml  Portuguese.toml  Russian.toml
LDYOM/Resources/: animations.json
LDYOM/Scripts/: baseNode.lua  config.ini  debug_table.lua  nodeGraphLua.lua  test.lua  test2.lua  utf8.lua
LDYOM/Themes/: Black_Elegant.toml  Darcula.toml  Gray.toml  Half-life.toml  cyber.toml  default.toml
LDYOM2/: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  conanprofile.txt
LDYOM2/src/: ldyom.cpp  lua_define_type.h
LDYOM2/src/core/: addons_manager.cpp  addons_manager.h  application.cpp  application.h  components_manager.cpp  components_manager.h  configuration.cpp  configuration.h  entities_manager.cpp  entities_manager.h  hotkeys.cpp  hotkeys.h  localization.cpp  localization.h  lua_manager.cpp  lua_manager.h  models_manager.cpp  models_manager.h  objectives_manager.cpp  objectives_manager.h  project_player.cpp  project_player.h  projects_manager.cpp  projects_manager.h  scenes_manager.cpp  scenes_manager.h  settings.cpp  settings.h  textures_manager.cpp  textures_manager.h
LDYOM2/src/data/: component.cpp  component.h  entity.cpp  entity.h  objective.h  objectives_container.cpp  objectives_container.h  project_info.h  scene.h  scene_info.h  scene_settings.h  texture.cpp  texture.h
LDYOM2/src/data/components/: actor.cpp  actor.h  actor_animation.cpp  actor_animation.h  actor_behaviour.cpp  actor_behaviour.h  actor_enter_to_vehicle.cpp  actor_enter_to_vehicle.h  actor_move_by_points.cpp  actor_move_by_points.h  actor_random_spawn.cpp  actor_random_spawn.h  actor_simple_task.cpp  actor_simple_task.h  checkpoint.cpp  checkpoint.h  firework.cpp  firework.h  health_bar.cpp  health_bar.h  object.cpp  object.h  objective_specific.cpp  objective_specific.h  particle.cpp  particle.h  pickup.cpp  pickup.h  vehicle.cpp  vehicle.h  weapons.cpp  weapons.h
LDYOM2/src/data/components/actor/: actor_animation.cpp  actor_animation.h  actor_behaviour.cpp  actor_drive_by_path.cpp  actor_drive_by_path.h  actor_enter_spawn_exit_vehicle.cpp  actor_enter_spawn_exit_vehicle.h  actor_enter_to_vehicle.cpp  actor_enter_to_vehicle.h  actor_move_by_points.cpp  actor_random_spawn.cpp  actor_simple_task.cpp  weapons.cpp
LDYOM2/src/data/components/object/: object_trigger_move.cpp  object_trigger_move.h
LDYOM2/src/data/objectives/: checkpoint.h  clock.h  countdown.h  cutscene.cpp  cutscene.h  destroy_vehicle.h  enter_to_vehicle.h  interact_with_object.h  kill_actor_gang.h  money_add.h  money_substract.h  test.h  wait_signal.h
LDYOM2/src/fonts/: fa.cpp  fa_icons.h  roboto.cpp
LDYOM2/src/gta_data/: eFadeFlag.h  eRelationshipType.h
LDYOM2/src/imgui_hook/: imgui_hook.cpp  imgui_hook.h  kiero.cpp  render_hook.cpp  render_hook.h
LDYOM2/src/imgui_hook/utils/: imgui_configurate.cpp  imgui_configurate.h  process_utils.cpp  process_utils.h  theme_loader.cpp  theme_loader.h
LDYOM2/src/lua/: log_bindings.cpp  log_bindings.h
LDYOM2/src/rendering/: modal_popup_window.cpp  modal_popup_window.h  window.cpp  window.h  window_manager.cpp  window_manager.h
LDYOM2/src/rendering/imgui_widgets/: imgui_widgets.cpp  imgui_widgets.h
LDYOM2/src/rendering/in_game/: actor_paths_editing.cpp  actor_paths_editing.h  cutscene_objective_editing.cpp  cutscene_objective_editing.h  object_transform_editing.cpp  object_transform_editing.h
LDYOM2/src/rendering/popups/: skin_selector.cpp  skin_selector.h  vehicle_selector.cpp  vehicle_selector.h  weapon_selector.cpp  weapon_selector.h
LDYOM2/src/rendering/windows/: addons_settings.cpp  addons_settings.h  create_new_component.cpp  create_new_component.h  create_new_objective.cpp  create_new_objective.h  create_new_project.cpp  create_new_project.h  entities.cpp  entities.h  entities_menu.cpp  entities_menu.h  init.cpp  init.h  main_menu.cpp  main_menu.h  objectives.cpp  objectives.h  project_manager.cpp  project_manager.h  quick_settings.cpp  quick_settings.h  scene_settings.cpp  scene_settings.h  scenes.cpp  scenes.h  scenes_settings.cpp  scenes_settings.h
LDYOM2/src/utils/: StringCaseConv.hpp  angles.h  blip_color_utils.h  counter_service.cpp  counter_service.h  cquat_json.h  fires_remover.cpp  fires_remover.h  imHotKey.h  ktcoro_wait.hpp  locked_ref.h  logger.cpp  logger.h  lua_define_type.h  matrix_utils.h  model_renderer.cpp  model_renderer.h  pad.cpp  pad.h  paths.h  rocket.hpp  string_utils.cpp  string_utils.h  task_manager.cpp  task_manager.h  timer_service.cpp  timer_service.h  utils_entities_selections.h  uuid_wrap.h  vector_utils.h  virtual_scene.cpp  virtual_scene.h
LDYOM2/src/utils/nlohmann/: json.hpp
LDYOM_ASI/: GUI.h  Init.cpp  Init.h  LDYOM_ASI.sln  MissionPlayer.cpp  MissionPlayer.h  NodeGraph.cpp  ScriptManager.cpp  carSelector.cpp  render.h
LDYOM_ASI/ImGUI/: imgui.cpp
LDYOM_ASI/LCAPI/: LCAPI.cpp  LCAPI.vcxproj  (+1 more)
Language/: English.ini  Russian.ini
MPACK7/: scr.scm  scr.txt  text.ini
Missions_pack/: LDYOM0.json
blog/: atom.xml  authors.yml  index.html  rss.xml
css/: style.css  style_cyber1.css
docs/: about.md  index.html  index.md
download/: index.html
lib/: MissManager.lua  TextToGTX.lua  mimgui_addons.lua~  mission_player.lua  resource.lua
markdown-page/: index.html
media/: back.webm
resources/: LDYOM Logo.ai  Logo.psd  header.psd
site/: 404.html  index.html  search.html  sitemap.xml
source/: .gitignore  LDYOM_R.sln  LDYOM_R.sln.DotSettings
tools/: categories_ru.toml  models.sqlite3  models_db_parser.py
(+3189 files in other folders)
